# gifsx

./: .gitattributes  .gitignore  .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
docs/: hierarchy.html  index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: DecodeOptions.html  Decoder.html  Encoder.html  Frame.html  NeuQuant.html
docs/enums/: ColorOutput.html  DisposalMethod.html  FrameBufType.html
docs/functions/: hexToRgb.html  hexToRgba.html  indexedToHex.html  indexedToRgba.html  rgbToHex.html  rgbaToHex.html
docs/media/: lib.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: package.json
src/: decoder.rs  encoder.rs  enums.rs  frame.rs  lib.rs  neuquant.rs  util.rs
