[package]
authors = ["lordex"]
edition = "2021"
name = "gifsx"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
color_quant = "1.1.0"
gif = "0.14.1"
napi = "3.8.3"
napi-derive = "3.5.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
